Fixed arrows issues in item page (overlapped by comments) - #4995

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/ThemeDark.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/ThemeDark.css
@@ -1021,9 +1021,6 @@ body {
 .page-sidebar-menu .icon svg {
   fill: #f5f5f5;
 }
-.page-body md-sidenav {
-  background: #323538;
-}
 .page-body md-sidenav md-content .md-button {
   color: #f5f5f5;
   fill: #f5f5f5;
