--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/siteColors.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/siteColors.less
@@ -1358,8 +1358,6 @@ Page Loading
 
     .page-body {
         md-sidenav {
-            background: @textColorDarkGrey;
-
             md-content {
                 .md-button {
                     color: @textColorWhite;
