--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/themeLight.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/themeLight.css
@@ -1338,9 +1338,6 @@ Page Loading
 .theme-light .page-sidebar-menu .icon svg {
   fill: #212325;
 }
-.theme-light .page-body md-sidenav {
-  background: #ffffff;
-}
 .theme-light .page-body md-sidenav md-content .md-button {
   color: #212325;
   fill: #212325;
